--- a/week2/cv.html
+++ b/week2/cv.html
@@ -79,7 +79,7 @@
         <div class="box-item-left">
             <div class="title">
                 <h3>ưu điểm - khuyết điểm</h3>
-                <i class="fas fa-bullseye target-icon"></i>
+                <i class="fas fa-thumbs-up target-icon"></i>
             </div>
             <div class="box-item-left-content">
                 <div class="content-left">
@@ -93,7 +93,7 @@
                 <div class="content-right">
                     <span>Nhược điểm:</span>
                     <ul>
-                        <li>Không giàu như Bill Gate</li>
+                        <li>Nhiều người theo đuổi</li>
                         <li>Hơi nhát gái</li>
                     </ul>
                 </div>
@@ -111,7 +111,7 @@
         <div class="contact">
             <div class="phone">
                 <div class="contact-icon">
-                    <i class="fas fa-phone-square-alt"></i>
+                    <i class="fas fa-blender-phone"></i>
                 </div>
                 <div class="contact-content">
                     <span>09765555555</span>
@@ -120,7 +120,7 @@
             </div>
             <div class="email">
                 <div class="contact-icon">
-                    <i class="fas fa-envelope"></i>
+                    <i class="far fa-envelope"></i>
                 </div>
                 <div class="contact-content">
                     <span>thaogreenred@gmail.com</span>
@@ -129,7 +129,7 @@
             </div>
             <div class="address">
                 <div class="contact-icon">
-                    <i class="fas fa-map-marked-alt"></i>
+                    <i class="fas fa-location-arrow"></i>
                 </div>
                 <div class="contact-content">
                     <span>Phố Nối, Hai Bà Trưng, Quảng Ninh</span>
